# Carzone-django-backend

./: db.sqlite3  pyproject.toml
config/: settings.py  urls.py
pages/: admin.py  models.py  urls.py  views.py
pages/migrations/: 0001_initial.py  0002_rename_teams_team.py  0003_alter_team_first_name_alter_team_last_name.py  0004_alter_team_options.py
templates/: base.html
templates/includes/: navbar.html
templates/pages/: about.html  contact.html  home.html  services.html
